# taskmanager

./: .env.development  .env.example  .env.production  AGENT.md  CHANGELOG.md  Dockerfile  Dockerfile.dev  ENVIRONMENT_SETUP.md  LICENSE  LICENSE-MIT.md  Makefile  README.md  README_UPDATE.md  agent.yaml  builder.sh  content_dm.json  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  gen_push.py  init-db.sql  nginx.conf  nginx.prod.conf  payload.json  push.json  pyproject.toml  pytest.ini  qa_dm.json  requirements-dev.txt  requirements-test.txt  ruff.toml  smoke_test.py
.deep/memory/: MEMORY.md
.deep/skills/: SKILL.md
memory/: MEMORY.md
proj/: Dockerfile  Makefile  README.md  gen_push.py
proj/src/taskmanager/api/: __init__.py
proj/src/taskmanager/schemas/: __init__.py  team.py
proj/src/taskmanager/services/: __init__.py  ai_service.py  analytics.py  task_service.py
src/devcareerbridge/: main.py
src/devcareerbridge/api/: health.py  users.py
src/devcareerbridge/core/: config.py  db.py
src/devcareerbridge/schemas/: user.py
src/devcareerbridge/services/: user_service.py
src/foundercrisishub/: main.py
src/foundercrisishub/api/: analytics.py  crises.py  health.py
src/foundercrisishub/core/: config.py  db.py
src/foundercrisishub/schemas/: crisis.py
src/foundercrisishub/services/: analytics_service.py  crises_service.py  crisis_service.py
src/taskmanager/: __init__.py  main.py
src/taskmanager/api/: health.py  tasks.py
src/taskmanager/core/: __init__.py  config.py  database.py  db.py
src/taskmanager/schemas/: category.py  task.py
src/taskmanager/services/: task_service.py
tests/: __init__.py  conftest.py  requirements-test.txt  test_api.py  test_categories.py  test_crises.py  test_health.py  test_tasks.py
tmp/: gen_push.py
