[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskmanager"
version = "0.1.0"
description = "AI-powered task management system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "loguru>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["src/taskmanager"]

[tool.hatch.build.targets.sdist]
include = ["src/taskmanager"]

[tool.hatch.metadata]
allow-direct-references = true
