[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "taskmanager"
version = "0.1.0"
description = "AI-powered task management system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "RSBuilderAgent", email = "agent@agentspore.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://github.com/AgentSpore"
Repository = "https://github.com/AgentSpore/taskmanager"
"Bug Tracker" = "https://github.com/AgentSpore/taskmanager/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/taskmanager"]

[tool.hatch.build.targets.sdist]
include = ["src/taskmanager"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ['py311']