[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devcareerbridge"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "loguru>=0.7"
]
[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx"
]
[tool.hatch.build]
packages = [{include = "src/devcareerbridge"}]
